@@ -22,12 +22,12 @@
     <parent>
         <groupId>org.apache</groupId>
         <artifactId>apache</artifactId>
-        <version>19</version>
+        <version>21</version>
     </parent>
 
     <groupId>org.apache.dubbo</groupId>
     <artifactId>dubbo-parent</artifactId>
-    <version>2.7.0-SNAPSHOT</version>
+    <version>2.7.1-SNAPSHOT</version>
     <packaging>pom</packaging>
 
     <name>${project.artifactId}</name>
@@ -89,8 +89,8 @@
 
     <properties>
         <!-- Test libs -->
-        <junit_jupiter_version>5.4.0-M1</junit_jupiter_version>
-        <hazelcast_version>3.9-EA</hazelcast_version>
+        <junit_jupiter_version>5.4.0</junit_jupiter_version>
+        <hazelcast_version>3.11.1</hazelcast_version>
         <hamcrest_version>1.3</hamcrest_version>
         <hibernate_validator_version>5.2.4.Final</hibernate_validator_version>
         <el_api_version>2.2.4</el_api_version>
@@ -98,8 +98,8 @@
         <cglib_version>2.2</cglib_version>
         <mockito_version>2.23.4</mockito_version>
         <!-- Build args -->
-        <argline>-server -Xms256m -Xmx512m -XX:PermSize=64m -XX:MaxPermSize=128m -Dfile.encoding=UTF-8
-            -Djava.net.preferIPv4Stack=true
+        <argline>-server -Xms256m -Xmx512m -Dfile.encoding=UTF-8
+            -Djava.net.preferIPv4Stack=true -XX:MetaspaceSize=64m -XX:MaxMetaspaceSize=128m
         </argline>
         <skip_maven_deploy>false</skip_maven_deploy>
         <updateReleaseInfo>true</updateReleaseInfo>
@@ -147,6 +147,7 @@
         <module>dubbo-distribution</module>
         <module>dubbo-metadata-report</module>
         <module>dubbo-configcenter</module>
+        <module>dubbo-dependencies</module>
     </modules>
 
     <dependencyManagement>
@@ -154,7 +155,7 @@
             <dependency>
                 <groupId>org.apache.dubbo</groupId>
                 <artifactId>dubbo-dependencies-bom</artifactId>
-                <version>2.7.0-SNAPSHOT</version>
+                <version>2.7.1-SNAPSHOT</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -195,55 +196,6 @@
     </dependencies>
 
     <profiles>
-        <profile>
-            <id>java6</id>
-            <properties>
-                <maven_jar_version>3.0.2</maven_jar_version>
-                <maven_surefire_version>2.22.1</maven_surefire_version>
-                <maven_deploy_version>2.7</maven_deploy_version>
-                <maven_compiler_version>3.1</maven_compiler_version>
-                <maven_source_version>3.0.1</maven_source_version>
-                <maven_javadoc_version>2.10.1</maven_javadoc_version>
-            </properties>
-        </profile>
-        <profile>
-            <id>test</id>
-            <activation>
-                <file>
-                    <missing>.project</missing>
-                </file>
-            </activation>
-            <modules>
-                <module>dubbo-test</module>
-            </modules>
-        </profile>
-        <profile>
-            <id>hudson</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <testFailureIgnore>true</testFailureIgnore>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>java8-vm-args</id>
-            <activation>
-                <jdk>[1.8,)</jdk>
-            </activation>
-            <properties>
-                <!-- Build args -->
-                <!-- if you run dubbo on java8+,please use these vm args -->
-                <argline>-server -Xms256m -Xmx512m -XX:MetaspaceSize=64m -XX:MaxMetaspaceSize=128m -Dfile.encoding=UTF-8
-                    -Djava.net.preferIPv4Stack=true
-                </argline>
-            </properties>
-        </profile>
         <profile>
             <id>checkstyle</id>
             <activation>
@@ -300,7 +252,6 @@
                                     <goal>jar</goal>
                                 </goals>
                                 <configuration>
-                                    <doclint>none</doclint>
                                     <additionalDependencies>
                                         <additionalDependency>
                                             <groupId>org.apache.logging.log4j</groupId>
@@ -322,8 +273,9 @@
                             <encoding>UTF-8</encoding>
                             <docencoding>UTF-8</docencoding>
                             <links>
-                                <link>http://docs.oracle.com/javase/7/docs/api</link>
+                                <link>http://docs.oracle.com/javase/8/docs/api</link>
                             </links>
+                            <doclint>none</doclint>
                         </configuration>
                     </plugin>
                     <plugin>
